@@ -1,20 +1,22 @@
 import(methods)
 
+import(BiocGenerics)
+import(GenomeInfoDb)
+import(RSQLite)
+import(S4Vectors)
+
 importFrom(stats, setNames)
 
-importFrom(httr, GET, content, progress, write_disk, stop_for_status, status_code)
+importFrom(httr, GET, content, progress, write_disk, stop_for_status,
+           status_code)
 
-importFrom(utils, capture.output, head, .DollarNames)
+importFrom(utils, capture.output, .DollarNames)
 
 importFrom(AnnotationDbi, dbconn, dbfile)
-
-import(RSQLite)
 
 importFrom(interactiveDisplayBase, display)
 
 importFrom(BiocInstaller, biocVersion)
-
-import(S4Vectors)
 
 exportClasses(AnnotationHub) 
 
@@ -23,5 +25,8 @@ export(AnnotationHub, cache, "cache<-", display, hubUrl, hubCache,
 
 S3method(.DollarNames, AnnotationHub)
 
-exportMethods(names, length, "$", "[", query, subset, "[[", show,
+S3method(as.list, AnnotationHub)
+
+exportMethods(names, length, "$", "[", query, subset, "[[", as.list, c,
+    show,
     snapshotDate, "snapshotDate<-", display, mcols, dbconn, dbfile)
